--- a/app/globals.css
+++ b/app/globals.css
@@ -24,4 +24,9 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+
+
+  .swiper-button-prev, .swiper-button-next {
+    @apply text-blue-800;
+  }
 }
