--- a/components/components.module.scss
+++ b/components/components.module.scss
@@ -6,35 +6,19 @@ $primary-font: 'IBM Plex Mono', monospace;
 .footer {
     @apply flex justify-center items-center w-full h-24 text-sm flex-col;
     font-family: $primary-font;
-    .label {
-        @apply block;
-        color: #c2c2c2;
-    }
 
     .icons  {
         @apply flex gap-4 mt-2;
         ul {
             @apply flex gap-4;
-            li {
-                transition: all 0.7s ease;
-                @apply hover:scale-90;
-                a {
-                    @apply text-slate-300;
-                    
-                    &:hover {
-                        @apply text-slate-400 scale-x-125;
-                    }
-                }
-            }
+           
         }
     }
 
 
 }
 
-.navbar {
-    @apply w-7/12 mx-auto text-sm rounded-md h-16 shadow-sm shadow-blue-900 flex gap-0;
-    font-family: $primary-font;
+
     .links {
         @apply rounded-md p-1 mx-auto w-1/2 flex gap-20 justify-center items-center;
 
@@ -44,7 +28,7 @@ $primary-font: 'IBM Plex Mono', monospace;
             @apply relative font-medium;
             &:after {
                 content: '';
-                @apply absolute -bottom-3 left-0 w-0 h-0.5 bg-slate-300 transition-all duration-300 ease-in;
+                @apply absolute -bottom-3 left-0 w-0 h-0.5 bg-slate-700 transition-all duration-300 ease-in;
             }
             @apply hover:text-slate-300;
             @apply hover:after:w-full;
@@ -65,7 +49,7 @@ $primary-font: 'IBM Plex Mono', monospace;
             }
         }
     }
-}
+
 
 .hard__skills {
     @apply flex flex-col items-center justify-center w-full h-full;
@@ -77,7 +61,7 @@ $primary-font: 'IBM Plex Mono', monospace;
             @apply justify-center items-center flex flex-col gap-4 duration-150 transform opacity-0;
 
             .icon {
-                @apply text-slate-300 text-center w-12 h-12;
+                @apply text-center w-12 h-12;
             }
 
             .name {
@@ -114,7 +98,6 @@ $primary-font: 'IBM Plex Mono', monospace;
 
         li:hover {
             @apply scale-125 cursor-default;
-            @apply text-slate-300;
             animation: rebound 0.3s ease-in-out;
         }
     }
