--- a/components/components.module.scss
+++ b/components/components.module.scss
@@ -1,4 +1,3 @@
-// import a new font
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&display=swap');
 $primary-color: #000;
 $primary-font: 'IBM Plex Mono', monospace;
@@ -55,17 +54,18 @@ $primary-font: 'IBM Plex Mono', monospace;
     @apply flex flex-col items-center justify-center w-full h-full;
 
     ul {
-        @apply flex flex-row mx-auto w-full items-center justify-center gap-28;
+        @apply flex flex-row mx-auto w-full items-center justify-center gap-20;
 
         li {
-            @apply justify-center items-center flex flex-col gap-4 duration-150 transform opacity-0;
+            @apply justify-center items-center flex flex-col gap-4 duration-150 transform opacity-0 ease-out;
 
             .icon {
                 @apply text-center w-12 h-12;
             }
 
             .name {
-                @apply text-center text-xs hidden;
+                @apply text-center text-xs mt-1;
+                font-family: $primary-font;
             }
         }
 
@@ -76,9 +76,6 @@ $primary-font: 'IBM Plex Mono', monospace;
                 @apply duration-150 ease-out -translate-y-1;
             }
 
-            .name {
-                @apply duration-150 ease-out block;
-            }
         }
 
 
